# linux_app_dev_21

./: README.md
02_TerminalProject_fix/: Show.c
03_Multifile/: Makefile  outlib.h
03_TerminalProject/: Makefile  Show.c
04_Text/: randomize.sh
05_Debugging/: Makefile  range.c
05_Debugging/scripts/: gdb_script1  gdb_script2
06_TracingFencing/: Makefile  move.c  protect.c  safe
07_Environmental/: Makefile.am  configure.ac  md5_test1.sh  md5_test2.sh  sha1_test1.sh  sha1_test2.sh
07_Environmental/src/: hasher.c
10_I18n/: Makefile.am  README.MD  configure.ac  guesser.c
10_I18n/po/: ru.po
11_Documenting/: Doc.md  Doxyfile  Makefile.am  configure.ac  guesser.c
11_Documenting/po/: ru.po
